feat: add cdk infrastructure for ecs

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,11 @@
 FROM public.ecr.aws/docker/library/python:3.13-alpine
 
+ARG APP_VERSION=0.1.0
+
 WORKDIR /app
 
-COPY dist/app-0.1.0-py3-none-any.whl /app/
+COPY dist/app-${APP_VERSION}-py3-none-any.whl /app/
 
-RUN pip install app-0.1.0-py3-none-any.whl
+RUN pip install app-${APP_VERSION}-py3-none-any.whl
 
-CMD python -m app.main
+CMD ["python", "-m", "app.main"]
