--- a/.github/workflows/create.yaml
+++ b/.github/workflows/create.yaml
@@ -17,7 +17,7 @@ jobs:
             - name: setup node
               uses: actions/setup-node@v6
               with:
-                node-version: 24
+                  node-version: 24
             - name: Checkout source
               uses: actions/checkout@v4
 
@@ -44,4 +44,6 @@ jobs:
             - name: Deploy Compute
               run: |
                   cd infra
+                  uv sync
+                  source .venv/bin/activate
                   cdk deploy
