cicd: add VPC_ID environment variable on deploy

--- a/.github/workflows/create.yaml
+++ b/.github/workflows/create.yaml
@@ -42,6 +42,8 @@ jobs:
             - name: Install cdk
               run: npm install -g aws-cdk
             - name: Deploy Compute
+              env:
+                  VPC_ID: ${{ vars.VPC_ID }}
               run: |
                   cd infra
                   uv sync
